feat(post): adding repository
